# LogPolarVisionAdapter

./: .envrc  .gitignore  CLAUDE.md  CONVENTIONS.md  DESIGN.md  LPXVISION_INTEGRATION.md  PLAN.md  install_local.sh  lpx_path_config.py  pyproject.toml  python3-local  python_lpx_client.py  run_local_only.sh  setup.sh
include/: mt_lpx_saccade.h
js/: LPXImage.js  package-lock.json  package.json
legacy/: AUTO_PATH_TEMPLATE.py  LOCAL_BUILD_USAGE.md  SETUP_CLEANUP.md  clean_path.sh  run_server_local.py
legacy/debug/: camera_diagnostic.py  check_lpx_libs.py  debug_fovea_sampling.py  debug_offset_issue.py  debug_saccade.py  debug_saccade_trace.py  debug_server.py  diagnose_saccade.py  minimal_server_test.py  simple_offset_test.py  verify_image_position.py
legacy/old_backups/: lpx_vision_backup.js  mt_lpx_renderer_bac.cpp
legacy/postmortems/: FINAL_FIX_SUMMARY.md  RENDERER_ARCHITECTURE_ISSUE.md  RENDERING_FIX_SUMMARY.md  RENDER_BUG_EXPLANATION.md  SACCADE_COMPLETE_FIX.md  SACCADE_FIX_PLAN.md  SACCADE_FIX_SUMMARY.md  SCAN_MAP_UNDERSTANDING.md
legacy/saccade/: lpx_saccade_fixed.py  lpx_saccade_wrapper.py
src/: mt_lpx_saccade.cpp
src/lpx_adapter/: __init__.py
src/lpx_adapter/adapter/: __init__.py
src/lpx_adapter/data/: __init__.py
src/lpx_adapter/eval/: __init__.py
validate_lpxvision/: create_rainbow_lPRImage.js  lpx_vision.js  rainbow_test_cpp.lpr  rainbow_test_js.lpr  rainbow_test_lpximage.lpx  test_generate_rainbow_spiral.py  test_lpxvision_format.cpp
validate_saccades/: README.md  lpx_renderer.py  lpx_server.py  test_opencv_backend.py  test_saccades.py
(+1 files in other folders)
